--- a/plonetheme/onegovbear/theme/scss/overlays.scss
+++ b/plonetheme/onegovbear/theme/scss/overlays.scss
@@ -20,17 +20,47 @@ $overlay-close-mask-color: transparentize($gray-light, 20%) !default;
   background: $overlay-close-mask-color !important;
   opacity: 1 !important;
   z-index: 999 !important;
+  position: fixed !important;
+  width: auto !important;
+  height: auto !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
 }
 
 .overlay, .contenttreeWindow {
   display: none;
   background-color: $content-bg-color;
-  padding: 2em;
+  padding: 0.3em;
   @include boxsizing(border-box);
   @include boxshadow(0.1em 0.1em 1em 0 $gray-dark);
   @include borderradius(10px);
-  min-width: 80%;
   z-index: 1000 !important;
+
+  position: fixed !important;
+  width: auto !important;
+  height: auto !important;
+  top: 20px !important;
+  bottom: 30px !important;
+  right: 10% !important;
+  left: 10% !important;
+
+  &.contenttreeWindow {
+    padding: 2em;
+    top: 30px !important;
+    bottom: 40px !important;
+    right: 20% !important;
+    left: 20% !important;
+  }
+
+  .pb-ajax {
+    @include boxsizing(border-box);
+    overflow: auto;
+    padding: 1em;
+    height: 100%;
+    width: 100%;
+  }
 
   .formControls {
     margin-top: 1em;
@@ -84,4 +114,13 @@ $overlay-close-mask-color: transparentize($gray-light, 20%) !default;
       }
     }
   }
+}
+
+
+#exposeMask + .contenttreeWindow {
+  z-index: 1001 !important;
+}
+
+#exposeMask + .contenttreeWindow + .contenttreeWindowBlocker {
+  z-index: 1000 !important;
 }
