--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -3,7 +3,56 @@
   margin-top: 1em;
 
   #portal-breadcrumbs {
+    width: 100%;
     float:left;
+    background-color: $gray;
+    > span {
+      padding: 6px 5px 8px 5px;
+      display:inline-block;
+      > a {
+        color: #000;
+        padding-right: 25px;
+      }
+      // White separator between pathbar lines
+      &:before {
+        content: "";
+        height: 3px;
+        position: absolute;
+        background-color: #fff;
+        left: 0;
+        right: 0;
+        margin-top: 24px;
+      }
+      > .breadcrumbSeparator {
+        padding-left: 0;
+        position: relative;
+        display: inline-block;
+        // White triangle for border
+        &:before {
+          content: "";
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-width: 18px 0 18px 23px;
+          border-color: transparent transparent transparent #fff;
+          position: absolute;
+          top: -24px;
+          right: 0;
+        }
+        // Grey triangle for separator
+        &:after {
+          content: "";
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-width: 14px 0 14px 18px;
+          border-color: transparent transparent transparent #ccc;
+          position: absolute;
+          top: -20px;
+          right: 5px;
+        }
+      }
+    }
   }
 
   @include tablet {
