--- a/plonetheme/onegovbear/theme/scss/simplelayout.scss
+++ b/plonetheme/onegovbear/theme/scss/simplelayout.scss
@@ -1,10 +1,10 @@
-$toolbar-bg-color: $gray-darker;
+$toolbar-bg-color: $gray-dark;
 $action-bg-color: $gray-dark;
 $action-bg-color-hover: $gray-light;
 
-$column-bg-color: $gray;
+$column-bg-color: $gray-light;
 
-$block-placeholder-bg-color: $gray-light;
+$block-placeholder-bg-color: $gray;
 $block-placeholder-border-size: 1px;
 $block-placeholder-border-style: dotted;
 $block-placeholder-border-color: $gray-dark;
