--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -1,3 +1,12 @@
+$pathbar-bg-color: $gray-light;
+$pathbar-arrow-color: #fff;
+$pathbar-text-color: $text-color;
+
+@include declare-variables(
+  pathbar-bg-color,
+  pathbar-arrow-color,
+  pathbar-text-color);
+
 #breadcrumbs-wrapper {
   margin-bottom: 0.5em;
   margin-top: 1em;
@@ -5,12 +14,12 @@
   #portal-breadcrumbs {
     width: 100%;
     float:left;
-    background-color: $gray;
+    background-color: $pathbar-bg-color;
     > span {
       padding: 6px 5px 8px 5px;
       display:inline-block;
       > a {
-        color: #000;
+        color: $pathbar-text-color;
         padding-right: 25px;
       }
       // White separator between pathbar lines
@@ -18,7 +27,7 @@
         content: "";
         height: 3px;
         position: absolute;
-        background-color: #fff;
+        background-color: $pathbar-arrow-color;
         left: 0;
         right: 0;
         margin-top: 24px;
@@ -46,7 +55,7 @@
           height: 0;
           border-style: solid;
           border-width: 14px 0 14px 18px;
-          border-color: transparent transparent transparent #ccc;
+          border-color: transparent transparent transparent $pathbar-bg-color;
           position: absolute;
           top: -20px;
           right: 5px;
