Pathbar displays border on the bottom in ie10
Fixes https://github.com/4teamwork/bern.web/issues/194

The padding was overlapping the parent element.

--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -16,7 +16,7 @@ $pathbar-text-color: $text-color;
     float:left;
     background-color: $pathbar-bg-color;
     > span {
-      padding: 6px 5px 8px 5px;
+      padding: 6px 8px;
       display:inline-block;
       > a {
         color: $pathbar-text-color;
