Make styling for login form.
Due to https://github.com/4teamwork/bern.web/issues/196 the styling for
the login page should be special.

--- a/plonetheme/onegovbear/theme/scss/login.scss
+++ b/plonetheme/onegovbear/theme/scss/login.scss
@@ -1,8 +1,18 @@
+.overlay-login {
+  width: 600px !important;
+  height: 320px !important;
+  left: 50% !important;
+  margin-left: -300px;
+  top: 50% !important;
+  margin-top: -280px;
+}
+
 #login-form {
   margin-bottom: 1em;
 
   label {
+    display: block;
+    line-height: 30px;
     min-width: 8em;
-    display: inline-block;
   }
 }
