Update colors + styling of service navigation.

--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -1,4 +1,4 @@
-$portal-top-bg-color: $gray-dark !default;
+$portal-top-bg-color: $page-bg-color !default;
 
 @include declare-variables(
   portal-top-bg-color);
