--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -11,4 +11,5 @@ $portal-top-bg-color: $page-bg-color !default;
   padding: 0.25em 0;
   height: 1.5em;
   position: relative;
+  font-size: $font-size-small;
 }
