Configure font-weights for links in content and service navigation.

--- a/plonetheme/onegovbear/theme/scss/servicenavigation.scss
+++ b/plonetheme/onegovbear/theme/scss/servicenavigation.scss
@@ -14,6 +14,7 @@ $service-nav-link-color: $secondary-color !default;
       > a {
         color: $service-nav-link-color;
         text-transform: uppercase;
+        font-weight: normal
       }
     }
   }
