--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -43,6 +43,7 @@ a,
 :visited {
   color: $link-color;
   text-decoration: $link-decoration;
+  font-weight: $link-font-weight;
   &:hover {
     color: $link-hover-color;
     text-decoration: $link-hover-decoration;
