--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -9,7 +9,7 @@ $portal-top-bg-color: $page-bg-color !default;
   max-width: $page-wrapper-width;
   margin: 0 auto;
   padding: 0.25em 0;
-  height: 1.5em;
   position: relative;
   font-size: $font-size-small;
+  @include clearfix();
 }
