--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -14,7 +14,7 @@ $page-wrapper-width: 1200px !default;
 
 body {
   background: $page-bg-color;
-  font-family: $font-family-base;
+  font-family: $font-family-base, $font-family-fallback;
   font-size: $font-size-base;
   line-height: $line-height-base;
   color: $text-color;
