--- a/plonetheme/onegovbear/theme/scss/languageselector.scss
+++ b/plonetheme/onegovbear/theme/scss/languageselector.scss
@@ -20,16 +20,14 @@ $language-selector-link-color: $secondary-color !default;
 
         a {
           color: $language-selector-link-color;
-
-          &:after {
-            font-weight: normal;
-            font-style: normal;
+          @extend .fa-icon;
+          @extend .fa-caret-down;
+          &:before {
             margin-left: 0.2em;
-            text-align: center;
-            min-width: 1.4em;
-            display: inline-block;
-            font-family: FontAwesome;
-            content: "\f0d7";
+            float: right;
+          }
+          &:after {
+            content: none;
           }
         }
       }
