--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -17,10 +17,10 @@ $pathbar-font-weight: normal !default;
     float:left;
     background-color: $pathbar-bg-color;
     > span {
-      padding: 6px 0 6px 0;
+      padding: 6px 0;
       display:inline-block;
       &:first-child {
-        padding: 6px 0px 6px 8px;
+        padding: 6px 0 6px 8px;
       }
       > a {
         color: $pathbar-text-color;
@@ -49,7 +49,6 @@ $pathbar-font-weight: normal !default;
           height: 0;
           border-style: solid;
           border-width: 17px 23px;
-          //border-width: 18px 0 18px 23px;
           border-color: transparent transparent transparent #fff;
           position: absolute;
           top: -23px;
@@ -62,7 +61,6 @@ $pathbar-font-weight: normal !default;
           height: 0;
           border-style: solid;
           border-width: 18px 24px;
-          //border-width: 14px 0 14px 18px;
           border-color: transparent transparent transparent $pathbar-bg-color;
           position: absolute;
           top: -24px;
